# Pantalla

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/audio_feedback/: CMakeLists.txt  audio_feedback.c  audio_feedback.h
components/cspot_player/: CMakeLists.txt  cspot_player.cpp  cspot_player.h
components/ha_client/: CMakeLists.txt  ha_client.c  ha_client.h
components/ma_client/: CMakeLists.txt  ma_client.c  ma_client.h
components/radio_player/: CMakeLists.txt  radio_player.c  radio_player.h
components/screen_audio/: CMakeLists.txt  screen_audio.c  screen_audio.h  screen_audio_old.c
components/screen_music/: CMakeLists.txt  screen_music.c  screen_music.h
components/snapcast_client/: CMakeLists.txt  snapcast_client.c  snapcast_client.h
components/spotify_client/: CMakeLists.txt  spotify_client.c  spotify_client.h
components/state/: CMakeLists.txt  app_state.c  app_state.h  event_bus.c  event_bus.h  nvs_store.c  nvs_store.h
components/ui/: CMakeLists.txt  palette_extractor.c  palette_extractor.h  screen_now_playing.c  screen_now_playing.h  screen_screensaver.c  screen_screensaver.h  ui_main.c  ui_main.h  widget_audio_mode.c  widget_audio_mode.h  widget_fft.c  widget_fft.h  widget_vinyl.c  widget_vinyl.h
components/ui/bsp/: bsp_display.h
components/volumio_client/: CMakeLists.txt  volumio_client.c  volumio_client.h
components/wifi_provision/: CMakeLists.txt  wifi_provision.c  wifi_provision.c.bak3  wifi_provision.c.bak4  wifi_provision.c.bak5  wifi_provision.c.bak6  wifi_provision.c.bak7  wifi_provision.h
main/: CMakeLists.txt  CMakeLists.txt.bak_sta  app_nav.c  app_nav.h  audio_console.c  audio_console.h  c6_ota.c  c6_ota.h  idf_component.yml  luces_screen.c  luces_screen.h  main.c  main.c.bak_nvs  main.c.bak_sta  main_menu.c  main_menu.h  spotify_screen.c  spotify_screen.h  wifi_config_screen.c  wifi_config_screen.c.bak_btn  wifi_config_screen.c.bak_chico  wifi_config_screen.c.bak_kb  wifi_config_screen.h  wifi_manager.c  wifi_manager.c.bak4  wifi_manager.c.bak5  wifi_manager.h
